<resources>
    <string name="app_name">calculadora</string>
    <string name="nombre_calculadora">Casio FX-115ES PLUS</string>

    <!-- Números -->

    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>

    <!-- Operaciones -->

    <string name="suma">+</string>
    <string name="restar">-</string>
    <string name="multiplicacion">x</string>
    <string name="division">/</string>
    <string name="borrar">c</string>
    <string name="igual">=</string>
    <string name="coma">,</string>
</resources>