<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="15dp"
    android:background="@drawable/gradient_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btnPlay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/play"
            android:onClick="reproducirMusica"
            android:layout_marginLeft="240dp"
            />

        <ImageView
            android:id="@+id/btnCambiar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/siguiente"
            android:onClick="cambiarCancion"
            android:layout_marginLeft="285dp"
            android:layout_marginTop="-50dp"
            />

        <ImageView
            android:id="@+id/btnStop"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/detener"
            android:onClick="detenerMusica"
            android:layout_marginLeft="330dp"
            android:layout_marginTop="-50dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/nombre_casio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/nombre_calculadora"
        android:textColor="#CDDC39"
        android:textSize="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="150dp">




        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:gravity="right"
            android:text=""
            android:textSize="40dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:background="@drawable/edittextstyle"
            android:paddingEnd="4dp"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:text="@string/btn_1"
                        android:background="@drawable/boton_personalizado"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:text="2"
                        android:background="@drawable/boton_personalizado"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:background="@drawable/boton_personalizado"
                        android:text="@string/btn_3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_restar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restar"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:background="@drawable/boton_personalizado"
                        />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:background="@drawable/boton_personalizado"
                        android:text="@string/btn_4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:background="@drawable/boton_personalizado"
                        android:text="@string/btn_5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:background="@drawable/boton_personalizado"
                        android:text="@string/btn_6" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_sumar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suma"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:background="@drawable/boton_personalizado"
                        />
                </LinearLayout>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_7"
                        android:textSize="25dp"
                        android:background="@drawable/boton_personalizado"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:background="@drawable/boton_personalizado"
                        android:text="@string/btn_8" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:background="@drawable/boton_personalizado"
                        android:text="@string/btn_9" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_multiplicar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/multiplicacion"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:background="@drawable/boton_personalizado"
                        />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_dividir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/division"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:background="@drawable/boton_personalizado"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_borrar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/borrar"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:background="@drawable/boton_personalizado"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_cero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_0"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:background="@drawable/boton_personalizado"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_igual"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/igual"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:background="@drawable/boton_personalizado"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/btn_coma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coma"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:background="@drawable/boton_personalizado"
                        />
                </LinearLayout>
            </TableRow>
        </TableLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>